2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Add new tests on strictness and warnings precedence and overriding.
	* tests/strictness-override.test: New test.
	* tests/strictness-precedence.test: New test.
	* tests/warnings-override.test: New test.
	* tests/warnings-precedence.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid testsuite failures due to Autoconf Fortran change.
	Autoconf v2.68-21-g727ce95 causes AC_F77_LIBRARY_LDFLAGS to
	require computing the canonical host name.  Ensure config.guess
	and config.sub files are present for respective checks.
	* tests/compile_f_c_cxx.test: Add stub files.
	* tests/flibs.test: Likewise.
	* tests/fort4.test: Use $AUTOMAKE -a for installing files.

2011-01-12   Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: clustered '-d' not recognized in YFLAGS
	This change fixes automake bug#7828.
	* doc/automake.texi (Yacc and Lex): Document that automake
	recognizes '-d' in AM_YFLAGS only if it's not clustered with
	other options.
	From a report by Юрий Пухальский.

2011-01-10   Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add checks on automatically-distributed files
	Related to automake bug#7819.
	* tests/autodist.test: New test.
	* tests/autodist-subdir.test: Likewise.
	* tests/autodist-acconfig.test: Likewise.
	* tests/autodist-acconfig-no-subdir.test: Likewise.
	* tests/autodist-aclocal-m4.test: Likewise.
	* tests/autodist-config-headers.test: Likewise.
	* tests/autodist-configure-no-subdir.test: Likewise.
	* tests/autodist-stamp-vti.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-01-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: do not force yacc-requiring tests to use bison
	* tests/defs.in: New required entry 'yacc'.  Remove old
	required entry 'bison'.
	* tests/cond35.test ($required): Require yacc, not bison.
	* tests/cond36.test: Likewise.
	* tests/pr204.test: Likewise.