@@ -792,6 +792,7 @@ silent-lex-gcc.test \
 silent-lex-generic.test \
 silent-yacc-gcc.test \
 silent-yacc-generic.test \
+silent-nowarn.test \
 sinclude.test \
 srcsub.test \
 srcsub2.test \
