@@ -1,5 +1,9 @@
 2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	New test on silent-rules mode and portability warnings.
+	* tests/silent-nowarn.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+
 	Add new tests on strictness and warnings precedence and overriding.
 	* tests/strictness-override.test: New test.
 	* tests/strictness-precedence.test: New test.
